--- a/tv_on_demand/templates/tv_on_demand/flash_home.html
+++ b/tv_on_demand/templates/tv_on_demand/flash_home.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!--
 
   	<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
 			id="relatoriobb" width="100%" height="100%"
@@ -32,6 +33,8 @@
 				pluginspage="http://www.adobe.com/go/getflashplayer">
 			</embed>
 	</object>
+   -->
+   <p>Flash aqui</p>
 
 </body>
 </html>
