--- a/tv_on_demand/templates/tv_on_demand/structure_form.html
+++ b/tv_on_demand/templates/tv_on_demand/structure_form.html
@@ -27,7 +27,7 @@
 
 {% block content %}
     {% if object %}
-        <p id="meadiadatabase_pk" style="display:none;">{{ object.mediadatabase.pk }}</p>
+        <p id="mediadatabase_pk" style="display:none;">{{ object.mediadatabase.pk }}</p>
     {% endif %}
     <div id="tv-on-demand">
         <div id="cont">
@@ -89,7 +89,7 @@
                         </em>
                         
                         <p class="ghost">
-                            <a href="/admin/mediafiles/mediafile/?media_type__exact=menu&mediadatabase__id__exact={{ object.mediadatabase.pk }}"
+                            <a href="/admin/mediafiles/mediafile/?media_type__exact=menu&media_database__id__exact={{ object.mediadatabase.pk }}"
                                  class="select-media">Selecionar um menu</a> <br/><br/>
                             <span class="ghost">
                                 Título<br /> <input type="text" name="fake_title" /> <br />
