--- a/tv_on_demand/templates/tv_on_demand/structure_form.html
+++ b/tv_on_demand/templates/tv_on_demand/structure_form.html
@@ -48,7 +48,7 @@
                     </div>
 
                     <div>
-                        {% structure_as_p form 'name,date_start,date_end,skin' %}
+                        {% structure_as_p form 'name,date_start,date_end,skin,mediadatabase' %}
                         <p class="buttons">
                             <input type="submit" value="{% trans 'Save' %}" name="structure_save" id="id_structure_save" /> <br />
                         </p>
