--- a/tv_on_demand/templates/tv_on_demand/flash_home.html
+++ b/tv_on_demand/templates/tv_on_demand/flash_home.html
@@ -26,7 +26,7 @@
             <param name="allowScriptAccess" value="always" />
             <embed src="/media/tod_skins/{{ structure.skin.slug }}.swf" quality="high" bgcolor="#000000"
                 width="100%" height="100%" name="index" align="middle"
-                flashVars="structure_id={{ structure.id }}&endpoint=http://{{ request.get_host }}{% url tod_amf_structure %}&video_url=http://{{ request.get_host }}/player/media/&tv_url=http://{{ request.get_host }}/call-tv-wall/&wait_time=20" 
+                flashVars="structure_id={{ structure.id }}&endpoint=http://{{ request.get_host }}{% url tod_amf_structure %}&video_url=http://{{ request.get_host }}/player/media/&tv_url=http://{{ request.get_host }}{{ wait_page_url }}&wait_time=20" 
                 play="true"
                 loop="false"
                 quality="high"
