--- a/tv_on_demand/templates/tv_on_demand/flash_home.html
+++ b/tv_on_demand/templates/tv_on_demand/flash_home.html
@@ -42,7 +42,7 @@
     <script type="text/javascript" src="/media/js/j.js"></script>
     <script type="text/javascript">
         $(function(){
-           $.get('/admin/format-screen/');
+           $.get('/format-screen/');
         });
     </script>
 
