--- a/tv_on_demand/templates/tv_on_demand/special/flash_special.html
+++ b/tv_on_demand/templates/tv_on_demand/special/flash_special.html
@@ -19,13 +19,13 @@
     <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
             id="index" width="100%" height="100%"
             codebase="http://fpdownload.macromedia.com/get/flashplayer/current/swflash.cab">
-            <param name="movie" value="/media/tod_skins/special/special.swf" />
+            <param name="movie" value="/media/tod_skins/special/{{ flash }}" />
             <param name='flashVars' value="tv=http://{{ request.get_host }}{% url call_television %}&news_channel=http://{{ request.get_host }}{% url call_tv_wall %}&interactive_channel=http://{{ request.get_host }}{% url home_promo 'promo' %} />
             <param name="quality" value="high" />
             <param name="bgcolor" value="#000000" />
             <param name="allowScriptAccess" value="always" />
             <param name="wmode" value="opaque" />
-            <embed src="/media/tod_skins/special/special.swf" quality="high" bgcolor="#000000"
+            <embed src="/media/tod_skins/special/{{ flash }}" quality="high" bgcolor="#000000"
                 width="100%" height="100%" name="index" align="middle"
                 flashVars="tv=http://{{ request.get_host }}{% url call_television %}&news_channel=http://{{ request.get_host }}{% url call_tv_wall %}&interactive_channel=http://{{ request.get_host }}{% url home_promo 'promo' %}" 
                 play="true"
