modificado o html errado

--- a/tv_on_demand/templates/tv_on_demand/special/flash_special.html
+++ b/tv_on_demand/templates/tv_on_demand/special/flash_special.html
@@ -38,5 +38,12 @@
             </embed>
     </object>
 </body>
+    
+    <script type="text/javascript" src="/media/js/j.js"></script>
+    <script type="text/javascript">
+        $(function(){
+           $.get('/format-screen/');
+        });
+    </script>
 
 </html>
